--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+	<title>Projects</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="main.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -26,7 +27,7 @@
 	  <tr>
 		<td>Aug 2021</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="articles/template.html">I took a nice afternoon nap</a></td>
+		<td><a href="projects/template.html">I took a nice afternoon nap</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -36,7 +37,7 @@
 	  <tr>
 		<td>Aug 2020</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="articles/template.html">Prediction of telemarketing success with decision trees</a></td>
+		<td><a href="projects/template.html">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
 
 	</table>
