--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+	<title>Harry Dong</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="main.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -17,8 +18,8 @@
 
 <body>
 	<ul class="nav_bar">
-	  <li style="margin-right:50px;"><a href="projects.html">Projects</a></li>
-	  <li style="border-bottom: solid; border-color:#E86100"><a href="index.html">Home</a></li>
+	  <li style="margin-right:50px;"><a href="projects">Projects</a></li>
+	  <li style="border-bottom: solid; border-color:#E86100"><a href="index">Home</a></li>
 	</ul>
 
 
@@ -65,7 +66,7 @@
 	  <tr>
 		<td>Aug 2021</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="articles/template.html">I took a nice afternoon nap</a></td>
+		<td><a href="projects/template">I took a nice afternoon nap</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -75,7 +76,7 @@
 	  <tr>
 		<td>Aug 2020</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="articles/template.html">Prediction of telemarketing success with decision trees</a></td>
+		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -85,7 +86,7 @@
 	  <tr>
 		<td></td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects.html">more...</a></td>
+		<td><a href="projects">more...</a></td>
 	  </tr>
 
 	</table>
