--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@
 	
 	
 	<ul class="nav_bar">
-	  <li style="border-bottom: solid; border-color:#E86100; margin-right:50px;"><a href="projects.html">Projects</a></li>
-	  <li><a href="index.html">Home</a></li>
+	  <li style="border-bottom: solid; border-color:#E86100; margin-right:50px;"><a href="projects">Projects</a></li>
+	  <li><a href="index">Home</a></li>
 	</ul>
 	
 	<h2 class="page_title">Projects</h2>
@@ -27,7 +27,7 @@
 	  <tr>
 		<td>Aug 2021</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template.html">I took a nice afternoon nap</a></td>
+		<td><a href="projects/template">I took a nice afternoon nap</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -37,7 +37,7 @@
 	  <tr>
 		<td>Aug 2020</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template.html">Prediction of telemarketing success with decision trees</a></td>
+		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
 
 	</table>
