--- a/projects/template.html
+++ b/projects/template.html
@@ -13,8 +13,8 @@
 	
 	
 	<ul class="nav_bar">
-	  <li style="border-bottom: solid; border-color:#E86100; margin-right:50px;"><a href="../projects.html">Projects</a></li>
-	  <li ><a href="../index.html">Home</a></li>
+	  <li style="border-bottom: solid; border-color:#E86100; margin-right:50px;"><a href="../projects">Projects</a></li>
+	  <li ><a href="../index">Home</a></li>
 	</ul>
 	
 	<h2 class="page_title"> Example Article </h2>
