--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,16 @@
 		<td> &nbsp &nbsp &nbsp </td>
 		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
+	  
+	  <td> &nbsp </td>
+	  <td> &nbsp </td>
+	  <td> &nbsp </td>
+		
+	  <tr>
+		<td>Feb 2020</td>
+		<td> &nbsp &nbsp &nbsp </td>
+		<td><a href="projects/template">I'm optimistic this year...it's gonna be a good one</a></td>
+	  </tr>
 
 	</table>
 
