--- a/projects/template.html
+++ b/projects/template.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 	<title>Article name</title>
+	<link rel="icon" type="image/png" href="../favicon.png"/>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../main.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
