--- a/index.html
+++ b/index.html
@@ -17,26 +17,13 @@
 	  <li style="border-bottom: solid; border-color:#E86100"><a href="index">Home</a></li>
 	</ul>
 
+	<div class="title_card">
 
-	<!-- Absolute madness, do not replicate -->
-	<div class="title">
-	<h1 class = "l1">H</h1>
-	<h1 class = "l2">a</h1>
-	<h1 class = "l3">r</h1>
-	<h1 class = "l4">r</h1>
-	<h1 class = "l5">y</h1>
-	<h1 class = "l6">&nbsp</h1>
-	<h1 class = "l7">D</h1>
-	<h1 class = "l8">o</h1>
-	<h1 class = "l9">n</h1>
-	<h1 class = "l10">g</h1>
-	</div>
+	<div class="title"><h1>Harry Dong</h1></div>
+
 	
-	
-	
-	<h2 class="sub_link"> <a href="#projects">Projects</a> </h2>
-	
-	<h3 class="sub_link"> <a href="#about">About</a> </h3>
+	<h3> <a href="#projects" class="title_link">Projects</a> </h3>
+	<h3> <a href="#about" class="title_link">About</a> </h3>
 	
 	<div class="footer">
 		<div class="icon">
@@ -49,8 +36,11 @@
 		<a href="mailto:harry.cz.dong@gmail.com"><img src="img/email.png" width="28" height="28"></img></a>
 		</div>
 	</div>
+	</div>
 	
-	<div class="frame" id="projects">
+	
+	
+	<div class="frame_no_border" id="projects">
 	<h2 class="page_title">Projects</h2>
 	
 	<h3 class="subtitle"> Data visualisations </h3>
