--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	  <tr>
 		<td>Aug 2021</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template">I took a nice afternoon nap</a></td>
+		<td><a href="projects/template">Cluster analysis</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -59,9 +59,9 @@
 	  <td> &nbsp </td>
 		
 	  <tr>
-		<td>Aug 2020</td>
+		<td>Aug 2021</td>
 		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
+		<td><a href="projects/template">Loan migration simulation with Markov chains</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
