--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,12 @@
 	<h2 class="page_title">Projects</h2>
 	
 	<h3 class="subtitle"> Data visualisations </h3>
-	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="">here</a></span>.</p>
+	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>
 
 	<h3 class="subtitle"> Posts </h3>
 	<table class="posts">
 	  <tr>
 		<td>Aug 2021</td>
-		<td> &nbsp &nbsp &nbsp </td>
 		<td><a href="projects/template">I took a nice afternoon nap</a></td>
 	  </tr>
 	  
@@ -38,7 +37,6 @@
 		
 	  <tr>
 		<td>Aug 2020</td>
-		<td> &nbsp &nbsp &nbsp </td>
 		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
 	  
@@ -48,7 +46,6 @@
 		
 	  <tr>
 		<td>Feb 2020</td>
-		<td> &nbsp &nbsp &nbsp </td>
 		<td><a href="projects/template">I'm optimistic this year...it's gonna be a good one</a></td>
 	  </tr>
 
