--- a/projects/bank_marketing.html
+++ b/projects/bank_marketing.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-	<title>Article name</title>
+	<title>Bank marketing</title>
 	<link rel="icon" type="image/png" href="../favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
@@ -19,11 +19,14 @@
 	  <li ><a href="../index">Home</a></li>
 	</ul>
 	
-	<h2 class="page_title"> Example Article </h2>
+	<h2 class="page_title"> Predicting the success of a bank telemarketing campaign </h2>
 	<p class="writing" style="color:#737373">Harry Dong</p>
 	
-	<h3 class="subtitle"> Example subheading </h3>
-	<p class="writing"> So, recently I've been doing this and that. Here's an example of the output: </p>
+	<h3 class="subtitle"> Problem </h3>
+	<p class="writing"> Using various machine learning techniques, I analysed data from a Portuguese bank, 
+	and explored which client characteristics are correlated with a successful marketing campaign. </p>
+	<p class="writing"> This is based on an old undergrad project, which I've expanded by adding a variety of classification models.</p>
+	<p class="writing"> <span class="link"><a href="../files/Bank Marketing.pdf">Download</a></span> </p>
 
 
 </body>
