--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 	  <li style="border-bottom: solid; border-color:#E86100"><a href="index">Home</a></li>
 	</ul>
 
+
+
+
 	<div class="title_card">
-
-	<div class="title"><h1>Harry Dong</h1></div>
-
 	
+	
+	
+	<div class="left_card">
+	<div class="title"><h1>Harry Dong</h1></div>
 	<h3> <a href="#projects" class="title_link">Projects</a> </h3>
 	<h3> <a href="#about" class="title_link">About</a> </h3>
-	
 	<div class="footer">
 		<div class="icon">
-		<a href="Harry Dong_CV.pdf"><img src="img/cv.png" width="28" height="28"></img></a>
+		<a href="files/Harry Dong_CV.pdf"><img src="img/cv.png" width="28" height="28"></img></a>
 		</div>
 		<div class="icon">
 		<a href="https://github.com/harry-cz-dong/projects"><img src="img/github.png" width="28" height="28"></img></a>
@@ -38,20 +41,25 @@
 	</div>
 	</div>
 	
+	<div class="right_card"><h2>Hey, I'm Harry.</h2><h2>On this website, I compile some of the various projects I've been working on.</h2></div>
+	
+	</div>
+	
+	
+	
 	
 	
 	<div class="frame_no_border" id="projects">
 	<h2 class="page_title">Projects</h2>
 	
 	<h3 class="subtitle"> Data visualisations </h3>
-	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="">here</a></span>.</p>	
+	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>	
 	
 	<h3 class="subtitle"> Most recent </h3>
 	<table class="posts">
 	  <tr>
 		<td>Aug 2021</td>
-		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template">Cluster analysis</a></td>
+		<td><a href="projects/template">Credit risk project with so and so</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -60,8 +68,7 @@
 		
 	  <tr>
 		<td>Aug 2021</td>
-		<td> &nbsp &nbsp &nbsp </td>
-		<td><a href="projects/template">Loan migration simulation with Markov chains</a></td>
+		<td><a href="projects/template">Markov project with so and so</a></td>
 	  </tr>
 	  
 	  <td> &nbsp </td>
@@ -70,7 +77,6 @@
 		
 	  <tr>
 		<td></td>
-		<td> &nbsp &nbsp &nbsp </td>
 		<td><a href="projects">more...</a></td>
 	  </tr>
 
@@ -81,8 +87,8 @@
 	<h2 class="page_title"> About </h2>
 	
 	<h3 class="subtitle"> Who am I </h3>
-	<p class="writing"> Hi, I'm Harry. I graduated from UNSW, majoring in Finance and Actuarial Studies. On this website, I compile some
-	of the various projects I've been working on. </p>
+	<p class="writing"> My name is Harry Dong. I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
+	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
 	<p class="writing"> If you'd like to contact me, shoot me an <span class="link"><a href="mailto:harry.cz.dong@gmail.com">email</a></span>.</p>
 
 	<h3 class="subtitle"> Skills </h3>
