--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 </head>
@@ -25,23 +25,32 @@
 	
 	
 	<div class="left_card">
+	<img src="img/profile.png" width="200" height="200" class="profile"></img>
 	<div class="title"><h1>Harry Dong</h1></div>
 	<h3> <a href="#projects" class="title_link">Projects</a> </h3>
-	<h3> <a href="#about" class="title_link">About</a> </h3>
+	<h3> <a href="#contact" class="title_link">Contact</a> </h3>
 	<div class="footer">
 		<div class="icon">
-		<a href="files/Harry Dong_CV.pdf"><img src="img/cv.png" width="28" height="28"></img></a>
+		<a href="files/Harry Dong_CV.pdf"><img src="img/alt_cv.png" width="28" height="28"></img></a>
 		</div>
 		<div class="icon">
-		<a href="https://github.com/harry-cz-dong/projects"><img src="img/github.png" width="28" height="28"></img></a>
+		<a href="https://github.com/harry-cz-dong/projects"><img src="img/alt_github.png" width="28" height="28"></img></a>
 		</div>
 		<div class="icon">
-		<a href="mailto:harry.cz.dong@gmail.com"><img src="img/email.png" width="28" height="28"></img></a>
+		<a href="mailto:harry.cz.dong@gmail.com"><img src="img/alt_email.png" width="28" height="28"></img></a>
 		</div>
 	</div>
 	</div>
 	
-	<div class="right_card"><h2>Hey, I'm Harry.</h2><h2>On this website, I compile some of the various projects I've been working on.</h2></div>
+	<div class="right_card">
+	<h2 class="page_title"> Hey! I'm Harry. </h2>
+	<p class="writing" style="text-align:justify;"> On this website, I compile some of the various projects I've been working on.</p>
+	
+	<h2 class="page_title"> About </h2>
+	<p class="writing" style="text-align:justify;"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
+	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
+	</div>
+
 	
 	</div>
 	
@@ -49,7 +58,7 @@
 	
 	
 	
-	<div class="frame_no_border" id="projects">
+	<div class="frame_grey" id="projects">
 	<h2 class="page_title">Projects</h2>
 	
 	<h3 class="subtitle"> Data visualisations </h3>
@@ -61,20 +70,12 @@
 		<td>Aug 2021</td>
 		<td><a href="projects/template">Credit risk project with so and so</a></td>
 	  </tr>
-	  
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-		
+
 	  <tr>
 		<td>Aug 2021</td>
 		<td><a href="projects/template">Markov project with so and so</a></td>
 	  </tr>
-	  
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-		
+	  	
 	  <tr>
 		<td></td>
 		<td><a href="projects">more...</a></td>
@@ -83,26 +84,19 @@
 	</table>
 	</div>
 	
-	<div class="frame" id="about">
-	<h2 class="page_title"> About </h2>
+	<div class="frame" id="contact">
+	<h2 class="page_title"> Contact </h2>
+	<p class="writing"> If you'd like to contact me, shoot me an <span class="link"><a href="mailto:harry.cz.dong@gmail.com">email</a></span>.</p> 
+	<p class="writing">Or, send me a message <span class="link"><a href="https://form.jotform.com/212470368706861" target="_blank">here</a></span>.</p>
 	
-	<h3 class="subtitle"> Who am I </h3>
-	<p class="writing"> My name is Harry Dong. I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
-	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
-	<p class="writing"> If you'd like to contact me, shoot me an <span class="link"><a href="mailto:harry.cz.dong@gmail.com">email</a></span>.</p>
 
-	<h3 class="subtitle"> Skills </h3>
-	<p class="writing"> 
-		<span class = "block">R</span> &nbsp
-		<span class = "block">Microsoft Excel</span> &nbsp
-		<span class = "block">SQL</span> &nbsp
-		<span class = "block">Python</span> &nbsp
-		<span class = "block">Tableau</span> &nbsp
-		<span class = "block">Statistics</span>
-	</p>
 	</div>
 
 </body>
+
+<footer>
+  <p></p>
+</footer>
 
 
 </html>
