--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 </head>
@@ -31,19 +31,12 @@
 		<td><a href="projects/template">I took a nice afternoon nap</a></td>
 	  </tr>
 	  
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-		
+
 	  <tr>
 		<td>Aug 2020</td>
 		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
 	  </tr>
-	  
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-	  <td> &nbsp </td>
-		
+
 	  <tr>
 		<td>Feb 2020</td>
 		<td><a href="projects/template">I'm optimistic this year...it's gonna be a good one</a></td>
