--- a/projects/template.html
+++ b/projects/template.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="../favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="../main.css">
+	<link rel="stylesheet" href="../alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 </head>
