--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
 </head>
 
 <body>
@@ -16,8 +16,6 @@
 	  <li style="margin-right:50px;"><a href="projects">Projects</a></li>
 	  <li style="border-bottom: solid; border-color:#E86100"><a href="index">Home</a></li>
 	</ul>
-
-
 
 
 	<div class="title_card">
@@ -43,14 +41,14 @@
 	</div>
 	
 	<div class="right_card">
-	<h2 class="page_title"> Hey! I'm Harry. </h2>
+	<h2 class="page_title"> Hi, I'm Harry. </h2>
 	<p class="writing" style="text-align:justify;"> On this website, I compile some of the various projects I've been working on.</p>
 	
 	<h2 class="page_title"> About </h2>
 	<p class="writing" style="text-align:justify;"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
 	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
 	</div>
-
+	
 	
 	</div>
 	
@@ -65,30 +63,23 @@
 	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>	
 	
 	<h3 class="subtitle"> Most recent </h3>
-	<table class="posts">
-	  <tr>
-		<td>Aug 2021</td>
-		<td><a href="projects/template">Credit risk project with so and so</a></td>
-	  </tr>
-
-	  <tr>
-		<td>Aug 2021</td>
-		<td><a href="projects/template">Markov project with so and so</a></td>
-	  </tr>
-	  	
-	  <tr>
-		<td></td>
-		<td><a href="projects">more...</a></td>
-	  </tr>
-
-	</table>
+	
+	<div class="thumb">
+		<img src="img/motor_thumb.png" width="220" height="220"> </img>
+		<img src="img/bank_thumb.png" width="220" height="220"> </img>
 	</div>
+	<p class="writing"><span class="link"><a href="projects">more...</a></span></p>
+	
+	
+	
+	</div>
+	
+
 	
 	<div class="frame" id="contact">
 	<h2 class="page_title"> Contact </h2>
 	<p class="writing"> If you'd like to contact me, shoot me an <span class="link"><a href="mailto:harry.cz.dong@gmail.com">email</a></span>.</p> 
-	<p class="writing">Or, send me a message <span class="link"><a href="https://form.jotform.com/212470368706861" target="_blank">here</a></span>.</p>
-	
+	<p class="writing">Alternatively, send me a <span class="link"><a href="https://form.jotform.com/212470368706861" target="_blank">message</a></span>.</p>
 
 	</div>
 
