--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
 </head>
 
 <body class="fade_in">
@@ -25,24 +25,7 @@
 	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>
 
 	<h3 class="subtitle"> Posts </h3>
-	<table class="posts">
-	  <tr>
-		<td>Aug 2021</td>
-		<td><a href="projects/template">I took a nice afternoon nap</a></td>
-	  </tr>
-	  
-
-	  <tr>
-		<td>Aug 2020</td>
-		<td><a href="projects/template">Prediction of telemarketing success with decision trees</a></td>
-	  </tr>
-
-	  <tr>
-		<td>Feb 2020</td>
-		<td><a href="projects/template">I'm optimistic this year...it's gonna be a good one</a></td>
-	  </tr>
-
-	</table>
+	
 
 </body>
 
