--- a/projects/bank_marketing.html
+++ b/projects/bank_marketing.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
 </head>
 
 <body class="fade_in">
@@ -20,14 +20,15 @@
 	</ul>
 	
 	<h2 class="page_title"> Predicting the success of a bank telemarketing campaign </h2>
-	<p class="writing" style="color:#737373">Harry Dong</p>
-	<p class="writing" style="color:#737373">Tools</p>
+	<p class="writing_grey">Harry Dong</p>
+
 	
 	<h3 class="subtitle"> Problem </h3>
 	<p class="writing"> Using various machine learning techniques, I analysed data from a Portuguese bank, 
-	and explored which client characteristics are correlated with a successful marketing campaign. </p>
+	and explored which client characteristics are correlated with a successful marketing campaign. I mainly used the <span class="tech">caret</span> package
+    in R to fit and evaluate the models. </p>
 	<p class="writing"> This is based on an old undergrad project, which I've expanded by adding a variety of classification models.</p>
-	<p class="writing"> <span class="link"><a href="../files/Bank Marketing.pdf">Download</a></span> </p>
+	<p class="writing"> <span class="link"><a href="../files/Bank Marketing.pdf">Report</a></span> </p>
 
 </body>
 
