--- a/projects/glmnet_insurance.html
+++ b/projects/glmnet_insurance.html
@@ -2,13 +2,13 @@
 
 <html lang="en">
 <head>
-	<title>Article name</title>
+	<title>Insurance claims</title>
 	<link rel="icon" type="image/png" href="../favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
 </head>
 
 <body class="fade_in">
@@ -19,11 +19,11 @@
 	  <li ><a href="../index">Home</a></li>
 	</ul>
 	
-	<h2 class="page_title"> Example Article </h2>
-	<p class="writing" style="color:#737373">Harry Dong</p>
+	<h2 class="page_title"> Estimating insurance claims with GLM </h2>
+	<p class="writing_grey">Harry Dong</p>
 	
-	<h3 class="subtitle"> Example subheading </h3>
-	<p class="writing"> So, recently I've been doing this and that. Here's an example of the output: </p>
+	<h3 class="subtitle"> Problem </h3>
+	<p class="writing"> Insurance policyholders are charged based on their level of risk. Their claim frequency and severity...</p>
 
 
 </body>
