--- a/index.html
+++ b/index.html
@@ -64,14 +64,30 @@
 	
 	<h3 class="subtitle"> Most recent </h3>
 	
-	<div class="thumb">
-		<img src="img/motor_thumb.png" width="220" height="220"> </img>
-		<img src="img/bank_thumb.png" width="220" height="220"> </img>
+	
+	<div class="container">
+		<div class="content">
+			<a href="projects/glmnet_insurance">
+			  <div class="content-overlay"></div>
+			  <img class="content-image" src="img/motor_thumb.png">
+			  <div class="content-details fadeIn-bottom">
+				<h3 class="content-title">Project</h3>
+				<p class="content-text">This is a short description</p>
+			  </div>
+			</a>
+		</div>
+		<div class="content">
+			<a href="projects/bank_marketing">
+			  <div class="content-overlay"></div>
+			  <img class="content-image" src="img/bank_thumb.png">
+			  <div class="content-details fadeIn-bottom">
+				<h3 class="content-title">Project</h3>
+				<p class="content-text">This is a short description</p>
+			  </div>
+			</a>
+		</div>
 	</div>
-	<p class="writing"><span class="link"><a href="projects">more...</a></span></p>
-	
-	
-	
+	<p class="writing" style="float: left;"><a href="projects">more...</a></p>
 	</div>
 	
 
