--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 	<h3> <a href="#contact" class="title_link">Contact</a> </h3>
 	<div class="footer">
 		<div class="icon">
-		<a href="files/Harry Dong_CV.pdf"><img src="img/alt_cv.png" width="28" height="28"></img></a>
+		<a class="no_icon" href="files/Harry Dong_CV.pdf"><img src="img/alt_cv.png" width="28" height="28"></img></a>
 		</div>
 		<div class="icon">
 		<a href="https://github.com/harry-cz-dong/projects"><img src="img/alt_github.png" width="28" height="28"></img></a>
@@ -42,10 +42,10 @@
 	
 	<div class="right_card">
 	<h2 class="page_title"> Hi, I'm Harry. </h2>
-	<p class="writing" style="text-align:justify;"> On this website, I compile some of the various projects I've been working on.</p>
+	<p class="writing"> On this website, I compile some of the various projects I've been working on.</p>
 	
 	<h2 class="page_title"> About </h2>
-	<p class="writing" style="text-align:justify;"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
+	<p class="writing"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
 	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
 	</div>
 	
@@ -86,8 +86,12 @@
 			  </div>
 			</a>
 		</div>
+	<p class="writing" style="line-height:220px; font-size: 30px; font-family: Times New Roman;
+	margin-left:3%;">
+		<a href="projects">. . .</a>
+	</p>	
 	</div>
-	<p class="writing" style="float: left;"><a href="projects">more...</a></p>
+	
 	</div>
 	
 
