--- a/projects/bank_marketing.html
+++ b/projects/bank_marketing.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
 </head>
 
 <body class="fade_in">
