--- a/projects/glmnet_insurance.html
+++ b/projects/glmnet_insurance.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../alt.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
 </head>
 
 <body class="fade_in">
@@ -19,11 +19,13 @@
 	  <li ><a href="../index">Home</a></li>
 	</ul>
 	
-	<h2 class="page_title"> Estimating insurance claims with GLM </h2>
+	<h2 class="page_title"> Estimating insurance claims with a regularised GLM</h2>
 	<p class="writing_grey">Harry Dong</p>
 	
 	<h3 class="subtitle"> Problem </h3>
-	<p class="writing"> Insurance policyholders are charged based on their level of risk. Their claim frequency and severity...</p>
+	<p class = "writing">Scenario: Insurers segment policyholders by characteristics (called rating factors). </p>
+	<p class="writing"> Dataset: <span class="link"><a href="ausprivauto0405" target="_blank"><span class = "tech">ausprivauto0405</span></a></span>
+	contains data from policyholders of a motor insurance product. </p>
 
 
 </body>
